assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Biryani&family=Montserrat+Alternates:ital@1&family=Oswald&display=swap');

/* Headings and Logo */
h1,
h2 {
    font-family: 'Oswald', sans-serif;
    text-align: center;
}

h3,
h4,
h5,
h6,
label {
    font-family: 'Montserrat Alternates', sans-serif;
    color: #1c1b1a
}

body {
    font-family: 'Biryani', sans-serif;
    background-color: #d7d7d7d4;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
}

hr {
    border: 0;
    height: 5px;
    background-image: linear-gradient(to right, #aade02, #09f8f3, #f50246);
    margin: 10px 5px;
}

/* General style */
.auto-margin {
    margin-left: auto;
    margin-right: auto;
}

/* Navigation Bar */
#navbar {
    background-color: #1c1b1a;
    padding: 10px;
    height: auto;
    max-height: 120px;
    overflow: hidden;
}

.logo {
    width: 20%;
    max-width: 120px;
}

#menu {
    font-size: 60%;
    letter-spacing: 2px;
    display: inline-flex;
    padding-left: 0;
    margin-top: 10%;
    float: right;
    max-height: 120px;
}

#menu li {
    list-style: none;
    padding-right: 10px;
    word-spacing: 5px;
}

.active {
    position: relative;
}

.active::after {
    content: " ";
    height: 2px;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to right, #aade02 0%, #aade02 33%, #09f8f3 33%, #09f8f3 66%, #f50246 66%, #f50246 100%);
}

#menu a {
    text-decoration: none;
    color: #FFFFFF;
    background-image: linear-gradient(to right, #aade02 0%, #aade02 33%, #09f8f3 33%, #09f8f3 66%, #f50246 66%, #f50246 100%);
    background-size: 0 100%;
    background-repeat: no-repeat;
}

#menu a:hover {
    background-size: 100% 100%;
    color: #1c1b1a;
    font-weight: bold;
    transition: 1s;
}

/* Hero Image */
#hero-outer {
    height: 350px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 350px;
    width: 100%;
    background: url("../images/hero-image.jpg") no-repeat center center;
    background-size: 110%;
}

#hero-text {
    text-transform: uppercase;
    text-align: center;
    position: absolute;
    bottom: 130px;
    right: 10%;
    left: 10%;
}

/* Cake options home page */
#cake-options {
    max-width: 95%;
    height: auto;
}

.cake-image-outer {
    height: 350px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.cake-image-inner {
    width: 100%;
    height: 350px;
}

.cake-image {
    background: url("../images/wedding-cake1.png") no-repeat center;
    background-size: 100%;
}

.cupcake-image {
    background: url("../images/vanilla-cupcake-home.png") no-repeat center;
    background-size: cover;
}

.cakecicles-image {
    background: url("../images/cakecicles-panda.png") no-repeat center;
    background-size: cover;
}

/* Testimonial home page */
.testimonial {
    max-width: 700px;
}

.testimonial-carousel {
    width: 100%;
    height: 100%;
    text-align: center;
    padding: 0px 20px 5px 20px;
}

.testimonial-comment {
    background-color: #d7d7d7;
    text-align: center;
    font-style: italic;
    position: relative;
    width: 75%;
    height: 50%;
    display: inline-block;
}

/* Footer */
#footer {
    border-top: 2px solid #aade02;
    background-color: #1c1b1a;
    max-height: 300px;
    font-size: x-small;
}

#footer h3 {
    color: #FFFFFF;
}

.footer-contact {
    color: #FFFFFF;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.footer-logo {
    padding: 10px;
    max-width: 120px;
}

.footer-contact-info {
    padding-right: 5%;
    color: #ffffff;
    text-decoration: none;
}

.social-media {
    border-bottom: 2px solid #f50246;
    border-top: 2px solid #09f8f3;
    font-size: small;
    display: flex;
    flex-direction: column;
    padding: 1%;
}

.company-footer {
    color: #ffffff;
}

.social-footer {
    word-spacing: 5px;
}

.social-links {
    color: #ffffff;
    text-decoration: none;
}

/* About me page */
.center-about {
    width: 100%;
}

.img-outer {
    width: 300px;
    height: 300px;
    margin: auto;
    padding: 10px;
}

.about-me-img {
    background: url("../images/female-baking-cake.jpg") no-repeat center/100%;
    height: 100%;
    border-radius: 50%;
}

.about-me-text {
    text-align: center;
    max-width: 700px;
    padding: 30px;
}

/* Gallery page */
.cake-photos {
    clear: both;
    line-height: 0;
    column-count: 2;
    column-gap: 4px;
    margin: 10px
}

.cake-photos img {
    width: 100%;
    margin: 2px 0px;
}

/* Form Page*/
label {
    font-weight: bold;
}

li label {
    font-weight: lighter;
}

.form-img {
    background: url("../images/kid-eating-cake.jpg") no-repeat center center;
    height: 100%;
    border-radius: 50%;
    background-size: cover;
}

.form-section {
    height: auto;
    padding: 10px;
    max-width: 900px;
}

.contact-form {
    background-color: #cfcece;
    border: 1px solid #1c1b1a;
    padding: 10px;
}

.contact-form h3 {
    text-align: center;
}

.input {
    background: #d7d7d7;
    width: 90%;
    padding: 5px 10px 2px 10px;
    font-family: inherit;
}

.comment-input,
.info-input {
    background: #d7d7d7;
    width: 95%;
    word-wrap: break-word;
    overflow-y: scroll;
    padding: 10px;
    font-family: inherit;
}

.form-column {
    float: left;
    width: 50%;
}

.form-row::after {
    content: "";
    display: table;
    clear: both;
}

.form-section .occassion,
.form-section .additional {
    padding-top: 10px;
}

.form-section h4 {
    margin-top: 0;
    margin-bottom: 5px;
}

.form-section ul {
    list-style: none;
    padding: 0;
    margin-top: 0;
}

.form-button-wrap {
    background: linear-gradient(to right, #aade02, #09f8f3, #f50246);
    position: relative;
    max-width: 180px;
    padding: 0 2px;
}

.form-button {
    text-align: center;
}

.submit-button {
    color: #1c1b1a;
    font-weight: bold;
}

/* Map */
#map {
    padding: 10px;
    max-width: 900px;
}

.contact-map {
    width: 100%;
    height: 300px;
    border: 0;
}

/* Media Queries */
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    #menu {
        font-size: 90%;
        margin: 50px 0;
    }

    #hero-outer {
        height: 450px;
    }

    #hero-image {
        height: 450px;
        background-size: 100%;
    }

    #hero-text {
        font-size: large;
        bottom: 185px;
        right: 10%;
        left: 10%;
    }

    .img-outer {
        width: 400px;
        height: 400px;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    #menu {
        font-size: 100%;
    }

    #hero-outer {
        height: 800px;
    }

    #hero-image {
        height: 800px;
        background-size: 100%;
    }

    #hero-text {
        font-size: x-large;
        bottom: 350px;
        right: 10%;
        left: 10%;
    }

    .cake-image-outer {
        border-radius: 50%;
        width: 50%;
    }

    .index-cakes {
        position: relative;
        max-height: 700px;
        max-width: 700px;
        margin-top: 50px;
        margin-left: auto;
        margin-right: auto;
        background-color: #ffffff;
        padding: 10px;
        border-radius: 10%;
    }

    .description {
        width: 45%;
        height: 350px;
        position: absolute;
        right: 0;
        top: 0;
    }

    .img-outer {
        width: 500px;
        height: 500px;
    }

    .cake-photos {
        column-count: 4;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    #menu {
        font-size: 150%;
        margin: 40px 0;
    }

    #menu li {
        padding-right: 15px;
    }

    .submit-button {
        color: #1c1b1a;
        opacity: 70%;
        font-weight: bold;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    #menu li {
        padding-right: 20px;
    }
}

